sizings, spacings, coin fixed cutoff

--- a/app/public/stylesheets/style.less
+++ b/app/public/stylesheets/style.less
@@ -55,7 +55,7 @@ ul {
         top: 0;
         right: 1420px;
         bottom: 0;
-        font-size: 21px;
+        font-size: 26px;
         font-weight: bold;
 
         .up{
@@ -76,15 +76,17 @@ ul {
 
         h1 {
             font-size: 36px;
+            margin-top:0;
+            margin-bottom:12px;
         }
 
         .totals-info {
-            font-size: 50px;
+            font-size: 60px;
             font-weight: bold;
             .total-change{
-                font-size:20px;
+                font-size:40px;
                 position: relative;
-                bottom: 20px;
+                bottom: 10px;
             }
         }
 
